Applies checkstyle (anti-hungarian) to StaggeredGrid and ExtendableListViews

--- a/.gitignore
+++ b/.gitignore
@@ -30,13 +30,15 @@ build/
 .gradle
 
 #IntelliJ IDEA
-#.idea
+.idea
 .idea/libraries
 workspace.xml
 tasks.xml
+*.iml
 *.ipr
 *.iws
 out
 
 #Plugins and errata
 mirror/
+
